--- a/written/eLifeRevision/eLife2020.bib
+++ b/written/eLifeRevision/eLife2020.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sean Bittner at 2021-04-15 16:19:50 -0400 
+%% Created for Sean Bittner at 2021-04-16 10:49:39 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{marder1992dynamic,
+	author = {Marder, Eve and Selverston, Allen I},
+	date-added = {2021-04-16 10:49:36 -0400},
+	date-modified = {2021-04-16 10:49:36 -0400},
+	publisher = {MIT press},
+	title = {Dynamic biological networks: the stomatogastric nervous system},
+	year = {1992}}
 
 @article{morris1981voltage,
 	author = {Morris, Catherine and Lecar, Harold},
